# cs396-final-project

./: .gitignore  AUTO_REVIEW.md  DATASET_CARD.md  NEW_PLAN.MD  PLAN.md  PROJECT_BRIEF.md  README.md  REPORT.md  RESEARCH_NARRATIVE.md  REVIEW_STATE.json  WRITEUP.md  pyproject.toml
carm/: __init__.py
configs/: ablation_no_abstain.yaml  ablation_no_cf.yaml  ablation_no_probes.yaml  cascade_carm_10pct.yaml  cascade_carm_full.yaml  cascade_carm_preflight.yaml  class_medium.yaml  class_medium_final.yaml  class_medium_final_qwen.yaml  cloud_gpu.yaml  cpu_local.yaml  default.yaml  distribution_carm_10pct.yaml  distribution_carm_10pct_v2.yaml  distribution_carm_full.yaml  distribution_carm_full_v2.yaml  distribution_carm_preflight.yaml  distribution_carm_preflight_v2.yaml  experimental_10pct_qwen.yaml  experimental_10pct_qwen_protocol_family.yaml  experimental_10pct_qwen_protocol_family_rerun.yaml  experimental_preflight_qwen_protocol_family.yaml  experimental_small_debug.yaml  experimental_small_qwen.yaml  flat_hidden_carm_full.yaml  hf_5way_qwen.yaml  hf_5way_qwen_caption_derived.yaml  hf_5way_qwen_caption_derived_10pct.yaml  hf_5way_qwen_caption_derived_10pct_protocol_family.yaml  hf_5way_qwen_caption_derived_10pct_protocol_family_lowmem.yaml  hf_5way_qwen_caption_derived_lowmem.yaml  hf_5way_qwen_runtime_normalized.yaml
docs/: implementation_blueprint.md  proposal_review.md  reproducibility.md
reports/: LOG.md  PAPER_PLAN.md  PIPELINE.md  PLAN.md  README.md  REPORT.md  RESEARCH_PIPELINE_REPORT.md
scripts/: audit_hf5way_derivability.py  backfill_hf_protocol_outputs.py  (+26 more)
(+102 files in other folders)
