[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carm"
version = "0.1.0"
description = "Conflict-Aware Reasoning Module scaffold for multimodal conflict arbitration"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "Pillow>=10.0",
  "datasets>=3.0.0",
  "huggingface_hub>=0.23.0",
  "torchvision>=0.17",
  "transformers>=4.57.0",
]

[tool.setuptools.packages.find]
include = ["carm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
